idea/testData/checkerWithErrorTypes/quick/regression/Jet53.jet
import <!UNRESOLVED_REFERENCE!>java<!>.util.Collections
import <!UNRESOLVED_REFERENCE!>java<!>.util.List

val ab = <!UNRESOLVED_REFERENCE!>Collections<!>.emptyList<Int>() : <!UNRESOLVED_REFERENCE!>List<!><Int>?